putting onload function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body onload="init()">
+<body>
     <h1>Evento de click</h1>
     <div id="target" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero expedita id facere impedit commodi eaque nihil dolores recusandae, eius assumenda blanditiis enim! Incidunt, laudantium, rerum quod esse, veritatis provident impedit repudiandae ea est fugiat beatae assumenda rem saepe dolores? Recusandae tenetur veritatis architecto doloremque odit?</div>
     <button id="log" onclick="enableLog(event);">Start/Stop event logging</button>
